[package]
name = "esp32-wifi-arcoiro"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }


[build-dependencies]
embuild = "0.29"
anyhow = "1"
